--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "marcal-desktop",
   "version": "1.0.0",
   "type": "module",
@@ -6,7 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "build:vercel": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:vercel": "npx vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "deploy:vercel": "node deploy-vercel.js",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -108,10 +109,10 @@
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
     "electron": "^28.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
+    "esbuild": "^0.25.0",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.19",
