--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.cjs",
+      "src": "package.json",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.cjs"
+      "dest": "/server/index.ts"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.cjs"
+      "dest": "/server/index.ts"
     }
   ]
 }
